--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>title</title>
+    <title>Cryptoeconomics: An Introduction</title>
   <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <style type="text/css">
@@ -19,12 +19,31 @@
       font-size: 2em;
       letter-spacing: 4px;
     }
+    .input-text {
+      font-family: 'Open Sans', sans-serif;
+      text-align: center;
+      margin-top: 20px;
+      font-size: 1em;
+      letter-spacing: 4px;
+      width: 70%;
+    }
+    .title-subheading {
+      font-size: 0.5em;
+    }
   </style>
   </head>
   <body>
     <img src="https://i.imgur.com/XzsEQmk.png" class="centered-img" />
     <div class="title-text">
+      <!--
 <div><span style="color:#58e48f;">P</span><span style="color:#79ce83;">r</span><span style="color:#9ab878;">o</span><span style="color:#bba26c;">g</span><span style="color:#dc8c60;">r</span><span style="color:#c08d7e;">a</span><span style="color:#a48f9c;">m</span><span style="color:#8890b9;">m</span><span style="color:#6c92d7;">a</span><span style="color:#5093f5;">b</span><span style="color:#687ce8;">l</span><span style="color:#7f66db;">e</span><span style="color:#974fcd;"> </span><span style="color:#ae38c0;">I</span><span style="color:#b949b5;">n</span><span style="color:#c459aa;">c</span><span style="color:#ce6aa0;">e</span><span style="color:#d97a95;">n</span><span style="color:#e48b8a;">t</span><span style="color:#bf9d9e;">i</span><span style="color:#99b0b3;">v</span><span style="color:#74c2c7;">e</span><span style="color:#4ed4db;">s</span></div>
+      -->
+      <div><span style="color:#5ee392;">C</span><span style="color:#6ed88c;">r</span><span style="color:#7dcd87;">y</span><span style="color:#8dc281;">p</span><span style="color:#9db87b;">t</span><span style="color:#acad75;">o</span><span style="color:#bca270;">e</span><span style="color:#cb976a;">c</span><span style="color:#db8c64;">o</span><span style="color:#c88d78;">n</span><span style="color:#b48f8d;">o</span><span style="color:#a190a1;">m</span><span style="color:#8d91b5;">i</span><span style="color:#7a92c9;">c</span><span style="color:#6694de;">s</span><span style="color:#5395f2;">:</span></div><div class="title-subheading"><span style="color:#5e8aec;">A</span><span style="color:#6980e5;">n</span><span style="color:#7475df;"> </span><span style="color:#806ad8;">I</span><span style="color:#8b5fd2;">n</span><span style="color:#9655cb;">t</span><span style="color:#a14ac5;">r</span><span style="color:#ac3fbe;">o</span><span style="color:#935ac7;">d</span><span style="color:#7b76d1;">u</span><span style="color:#6291da;">c</span><span style="color:#4aade3;">t</span><span style="color:#31c8ec;">i</span><span style="color:#19e4f6;">o</span><span style="color:#00ffff;">n</span></div>
+<br>
+<a href="http://forum.cryptoeconomics.study/" style="text-decoration: none">Forum</a>
+<br>
+<br>
+<input type="text" class="input-text" id="fname" name="firstname" placeholder="Your email...">
     </div>
   </body>
 </html>
