--- a/homepage/index.html
+++ b/homepage/index.html
@@ -1,8 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-74179218-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-74179218-2');
+</script>
+
     <meta charset="UTF-8">
 <meta content='width=device-width, initial-scale=1' name='viewport'/>
+  <meta name="description" content="A course on Cryptoeconomics">
+  <meta name="keywords" content="cryptoeconomics,book,course,lectures,blockchain,education">
     <title>Cryptoeconomics: An Introduction</title>
   <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
@@ -85,3 +97,4 @@
     </div>
   </body>
 </html>
+
