Update homepage & add favicon

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -52,6 +52,29 @@
     .with-love .heart {
       width: 1em;
     }
+.intrinsic-container {
+  position: relative;
+  height: 0;
+  overflow: hidden;
+}
+
+/* 16x9 Aspect Ratio */
+.intrinsic-container-16x9 {
+  padding-bottom: 56.25%;
+}
+
+/* 4x3 Aspect Ratio */
+.intrinsic-container-4x3 {
+  padding-bottom: 75%;
+}
+
+.intrinsic-container iframe {
+  position: absolute;
+  top:0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
   </style>
   </head>
   <body>
@@ -59,6 +82,13 @@
     <div class="title-text">
       <!-- Book title -->
       <div><span style="color:#5ee392;">C</span><span style="color:#6ed88c;">r</span><span style="color:#7dcd87;">y</span><span style="color:#8dc281;">p</span><span style="color:#9db87b;">t</span><span style="color:#acad75;">o</span><span style="color:#bca270;">e</span><span style="color:#cb976a;">c</span><span style="color:#db8c64;">o</span><span style="color:#c88d78;">n</span><span style="color:#b48f8d;">o</span><span style="color:#a190a1;">m</span><span style="color:#8d91b5;">i</span><span style="color:#7a92c9;">c</span><span style="color:#6694de;">s</span><span style="color:#5395f2;">:</span></div><div class="title-subheading"><span style="color:#5e8aec;">A</span><span style="color:#6980e5;">n</span><span style="color:#7475df;"> </span><span style="color:#806ad8;">I</span><span style="color:#8b5fd2;">n</span><span style="color:#9655cb;">t</span><span style="color:#a14ac5;">r</span><span style="color:#ac3fbe;">o</span><span style="color:#935ac7;">d</span><span style="color:#7b76d1;">u</span><span style="color:#6291da;">c</span><span style="color:#4aade3;">t</span><span style="color:#31c8ec;">i</span><span style="color:#19e4f6;">o</span><span style="color:#00ffff;">n</span></div>
+<br>
+
+<div style="max-width: 555px; margin: auto;">
+<div class="intrinsic-container intrinsic-container-16x9">
+  <iframe src="https://www.youtube.com/embed/m-0escxJ-j8" allowfullscreen frameborder="0"></iframe>
+</div>
+</div>
 <br>
 <a href="http://forum.cryptoeconomics.study/" style="text-decoration: none">Forum</a>
 <br>
