Update website & add code

--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
   <a href="https://forum.cryptoeconomics.study/" style="text-decoration: none">Forum</a>
 </div>
 <div class="main-menu-item">
-  <a href="/lectures" style="text-decoration: none" onclick="openSidebar()">Lectures</a>
+  <a href="/lectures/index.html" style="text-decoration: none" onclick="openSidebar()">Lectures</a>
 </div>
 <div class="main-menu-item">
-  <a href="/book" style="text-decoration: none" onclick="openSidebar()">Book</a>
+  <a href="/book/index.html" style="text-decoration: none" onclick="openSidebar()">Book</a>
 </div>
 <!-- Begin MailChimp Signup Form -->
 <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
