Add first three sections

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
   <a href="https://forum.cryptoeconomics.study/" style="text-decoration: none">Forum</a>
 </div>
 <div class="main-menu-item">
-  <a href="/lectures/index.html" style="text-decoration: none" onclick="openSidebar()">Lectures</a>
+  <a href="/lectures/chapter-00.html" style="text-decoration: none" onclick="openSidebar()">Lectures</a>
 </div>
 <div class="main-menu-item">
   <a href="/book/index.html" style="text-decoration: none" onclick="openSidebar()">Book</a>
@@ -116,7 +116,7 @@
 <div id="mc_embed_signup" style="max-width: 500px; margin: auto">
 <form style="padding: 0" action="https://tech.us12.list-manage.com/subscribe/post?u=605d9798beeb8a1824c8e54e4&amp;id=2bdff54a52" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
-	<label for="mce-EMAIL" style="font-size: 0.4em; font-weight: normal; text-align: center">Recieve Updates</label>
+	<label for="mce-EMAIL" style="font-size: 0.4em; font-weight: normal; text-align: center">Receive Updates</label>
 	<input type="email" style="max-width: 500px;font-family: 'Open Sans', sans-serif; text-align: center; margin:auto; margin-bottom: 10px;" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Your email... ⏎" required>
     <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
     <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_605d9798beeb8a1824c8e54e4_2bdff54a52" tabindex="-1" value=""></div>
@@ -128,7 +128,6 @@
 <div class="with-love">
   <span class="vertical-align-text">With</span> <img class="heart" src="https://i.imgur.com/73BkZnF.png"/> from
   <img style="width: 35px; vertical-align: middle; padding-bottom: 5px; padding-right:5px" src="https://user-images.githubusercontent.com/706123/38688835-11c5764c-3e48-11e8-94e5-24c223aabac7.png" /> 
-    <img style="width: 75px; vertical-align: middle; padding-bottom: 5px;" src="https://i.imgur.com/Yuw5Azp.png"/>
     <span style="font-size: 0.6em; letter-spacing: 1px;">· Karl · Jinglan · Aparna · <a style="text-decoration: none" href="http://forum.cryptoeconomics.study">You! Please get involved :)</a></span>
 </div>
     </div>
