--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 <div class="with-love">
   <span class="vertical-align-text">With</span> <img class="heart" src="https://i.imgur.com/73BkZnF.png"/> from
   <img style="width: 35px; vertical-align: middle; padding-bottom: 5px; padding-right:5px" src="https://user-images.githubusercontent.com/706123/38688835-11c5764c-3e48-11e8-94e5-24c223aabac7.png" /> 
-    <span style="font-size: 0.6em; letter-spacing: 1px;">· Karl · Jinglan · Aparna · <a style="text-decoration: none" href="http://forum.cryptoeconomics.study">You! Please get involved :)</a></span>
+    <span style="font-size: 0.6em; letter-spacing: 1px;">· <a style="text-decoration: none" href="http://forum.cryptoeconomics.study">Please get involved :)</a></span>
 </div>
     </div>
   </body>
